app.yaml
# app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: production-app
spec:
  replicas: 100
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: nginx
        ports:
        - containerPort: 80
