service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: production-app
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
